--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </p>
                 </div>
                 <div class="comp-items">
-                    <h5>Design Graphique</h5>
+                    <h5>Audiovisuel</h5>
                     <p class="general-text">Bonne culture du monde Audivisuel, réalisation, écriture de scénario, montage vidéo. Métrise des logiciels
                         Adobe <strong>Premiere Pro</strong>, <strong>After Effect</strong>. Minutie et sens du détail.
                     </p>
