--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h4>CV - Tom CHARLET</h4>
                 </div>
                 <div class="pop-icon">
-                    <a href="img/CV.png" download="CV-Tom CHARLET" target="_blank">
+                    <a href="img/CV.jpg" download="CV-Tom CHARLET" target="_blank">
                         <svg class="DL-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30.75 31.5"><g id="Calque_2" data-name="Calque 2"><g id="BG"><path class="cls-1" d="M29.25,24.75a1.5,1.5,0,0,0-1.5,1.5V28.5H3V26.25a1.5,1.5,0,0,0-3,0V30a1.5,1.5,0,0,0,1.5,1.5H29.25a1.5,1.5,0,0,0,1.5-1.5V26.25A1.5,1.5,0,0,0,29.25,24.75Z"/><path class="cls-1" d="M6.93,13.91,14.43,20a1.53,1.53,0,0,0,1.9,0s7.13-6.12,7.15-6.12a1.5,1.5,0,0,0-2-2.28l-4.64,4V1.5a1.5,1.5,0,0,0-3,0V15.7L8.82,11.59A1.5,1.5,0,0,0,6.93,13.91Z"/></g></g></svg>
                     </a>
                     <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.52 29.52"><g id="Calque_2" data-name="Calque 2"><g id="BG"><path class="cls-1" d="M14.76,12.64,2.56.44A1.49,1.49,0,0,0,.44.44h0a1.49,1.49,0,0,0,0,2.12l12.2,12.2L.44,27a1.49,1.49,0,0,0,0,2.12h0a1.51,1.51,0,0,0,2.12,0l12.2-12.2L27,29.08a1.51,1.51,0,0,0,2.12,0h0a1.51,1.51,0,0,0,0-2.12l-12.2-12.2,12.2-12.2a1.51,1.51,0,0,0,0-2.12h0A1.49,1.49,0,0,0,27,.44Z"/></g></g></svg>
