--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- LOADING -->
     <div class="loading">
-        <img src="img/bg.jpg" alt="background">
+        <img src="img/bg.JPG" alt="background">
         <svg id="tom-svg" xmlns="http://www.w3.org/2000/svg" viewBox="-5 -5 950.04 96.41">
             <g data-name="tom-svg">
                 <g id="tom-svg-text">
