--- a/pages/project-target.html
+++ b/pages/project-target.html
@@ -177,7 +177,7 @@
                         T-ARGET est un projet fictif dont l'objectif était la création d'objet connecté innovant.
                     </p>
                 </div>
-                <a href="https://huntercobra18.github.io/Target/" class="project-link" target="_blank">Site Web</a>
+                <a href="https://huntercobra18.github.io/Target/" class="project-link" target="_blank">Site Web (BONUS)</a>
             </section>
 
     </main>
