--- a/pages/project-mesrine.html
+++ b/pages/project-mesrine.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="../pages/project-mask.html">Projet Précédent</a></li>
                 <li><a href="../index.html"><img src="../img/logo/TC.png" alt="logo_tom_charlet"></a></li>
-                <li><a href="../pages/project-lepalais.html">Projet Suivant</a></li>
+                <li><a href="../pages/project-disarmed.html">Projet Suivant</a></li>
             </ul>
         </nav>
     </header>
