--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
                 <div class="work-project video-project">
                     <h4>disarmed</h4>
-                    <a data-filter="6" href="pages/project-disarmed.html>
+                    <a data-filter="6" href="pages/project-disarmed.html">
                         <img src="source/projet-img/video/disarmed.jpg" alt="disarmed">
                     </a>
                 </div>
