--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <section class="contact-mail glass-sec">
             <h4 class="sub-title">Une question ? Un service ?</h4>
             <p class="general-text">
-                Vous avez besoin d'un site WEB n'hésitez pas à me contacter à l'adresse mail suivante :
+                Vous avez besoin d'un site web ou d'une nouvelle identité graphique ? N'hésitez pas à me contacter à l'adresse mail suivante :
                 <a class="general-text" href="mailto:charlettom11@gmail.com">charlettom11@gmail.com</a>
             </p>
         </section>
