--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <h3 class="main-title">Qui suis-je ?</h3>
         <section class="about-sec">
             <div class="about-me glass-sec">
-                <p class="about-text general-text">Bonjour je m'appel Tom CHARLET, je suis étudiant en DUT MMI à
+                <p class="about-text general-text">Bonjour je m'appelle Tom CHARLET, je suis étudiant en DUT MMI à
                     l’université de ROUEN.
                     Passionné par le développement Web, je suis actuellement à la recherche d'un stage de 10 semaines
                     dans la
@@ -159,8 +159,8 @@
                 <div class="comp-items">
                     <h5>Design Graphique</h5>
                     <p class="general-text">Réalisation d'identité graphique, d'affiches et de bannières publicitaires.
-                        maitrise des logiciels de la suite Adobe tel qu’
-                        <strong>iIllustrator</strong> ou <strong>Photoshop</strong>. Métrise de <strong>GANT
+                        Maitrise des logiciels de la suite Adobe tel qu’
+                        <strong>iIllustrator</strong> ou <strong>Photoshop</strong>. Maitrise de <strong>GANT
                             PROJECT</strong>.
                     </p>
                 </div>
