Modification texte de présentation

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
         <h3 class="main-title">Qui suis-je ?</h3>
         <section class="about-sec">
             <div class="about-me glass-sec">
-                <p class="about-text general-text">Bonjour je m'appelle Tom CHARLET, je suis étudiant en DUT MMI à
-                    l’université de ROUEN.
-                    Passionné par le développement Web, je suis actuellement à la recherche d'un stage de 10 semaines
-                    dans la
-                    communication numérique.
+                <p class="about-text general-text">Actuellement étudiant en deuxième année d'IUT MMI (Métiers du Multimédia et de l'Internet) à Elbeuf, 
+                    je suis à la recherche d'une alternance dans l'intégration ou le développement web aux alentours de Rouen. Mon objectif étant d'intégrer 
+                    la Licence Professionnelle Métiers du Numérique, afin de me spécialiser dans l'intégration web et d'approfondir mes connaissances en 
+                    développement web. Le métier d'intégrateur web représente pour moi un objectif professionnel néanmoins, je suis ouvert à tout type de 
+                    métier se rattachant au développement web, tant Frondend que Backend.
                 </p>
                 <div class="about-img general-text">
                     <img src="img/profil-tom.jpg" alt="photo profil tom">
