Correction texte intro

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section class="about-sec">
             <div class="about-me glass-sec">
                 <p class="about-text general-text">Actuellement étudiant en deuxième année à l’université de Rouen en
-                    DUT MMI (Métiers du Multimédia et de l'Internet),<br>
+                    DUT MMI (Métiers du Multimédia et de l'Internet),
                     je suis à la recherche d'une alternance aux alentours de Rouen,
                     afin d'intégrer une Licence Professionnelle dans le domaine du développement frontend et
                     l'intégration web.
