--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="work-project site-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
-                        <p>En conception</p>
+                        <p>Page en conception</p>
                     </div>
                     <h4>site fc ems</h4>
                     <a>
@@ -211,7 +211,7 @@
                 <div class="work-project illu-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
-                        <p>En conception</p>
+                        <p>Page en conception</p>
                     </div>
                     <h4>signaletique</h4>
                     <a>
@@ -221,7 +221,7 @@
                 <div class="work-project video-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
-                        <p>En conception</p>
+                        <p>Page en conception</p>
                     </div>
                     <h4>motion design</h4>
                     <a>
@@ -243,7 +243,7 @@
                 <div class="work-project illu-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
-                        <p>En conception</p>
+                        <p>Page en conception</p>
                     </div>
                     <h4>concept</h4>
                     <a>
@@ -277,7 +277,7 @@
                 <div class="work-project illu-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
-                        <p>En conception</p>
+                        <p>Page en conception</p>
                     </div>
                     <h4>environnement</h4>
                     <a>
@@ -287,7 +287,7 @@
                 <div class="work-project video-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
-                        <p>En conception</p>
+                        <p>Page en conception</p>
                     </div>
                     <h4>cone jumper</h4>
                     <a>
