Modification texte contact

--- a/pages/project-signaletique.html
+++ b/pages/project-signaletique.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <!-- HAUT DE PAGE A FAIRE -->
+    <!-- HAUT DE PAGE -->
 
     <a class="btn-top glass-sec" href="#">
         <img src="../img/icon/arrowDown.svg" alt="linkedin-icon">
@@ -36,9 +36,10 @@
 
     <main class="main-project">
 
-        <!-- RAW MAGAZINE -->
-
         <div id="3" class="project-container glass-sec">
+
+            <!-- CONTENU PROJET -->
+
             <section class="sec-content">
 
                 <h3 class="sub-title">Affiches</h3>
@@ -70,6 +71,10 @@
                 <!-- <p class="text-project"></p> -->
 
             </section>
+
+
+            <!-- DESCRIPTION PROJET -->
+
             <section class="sec-desc">
                 <h2 class="project-title">Mask, lives better</h2>
                 <div class="project-logo">
@@ -87,12 +92,11 @@
                     class="project-link" target="_blank">En savoir plus</a>
             </section>
 
-            <!-- RAW MAGAZINE -->
     </main>
 
     <footer>
         <div>
-            <a href="mailto:charlettom11@gmail.com">tom.charlet@univ-rouen.fr</a>
+            <a href="mailto:charlettom11@gmail.com">charlettom11@gmail.com</a>
             <p>TOM CHARLET 2022 ©</p>
             <a href="https://www.linkedin.com/in/tom-charlet-4a8515208" target="_blank"
                 rel="noopener noreferrer">LINKEDIN</a>
