Modification texte compétences

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                 <div class="comp-items">
                     <h5>Développement Web</h5>
                     <p class="general-text">Compétences principales en développement frontend.
-                        Maitrise des langages <strong>HTML 5</strong>, <strong>CSS 3</strong>,
+                        Maitrise des langages <strong>HTML 5</strong>, <strong>CSS 3 (flexbox, grid, SASS)</strong>,
                         <strong>JavaScript</strong>,
                         <strong>jQuery</strong> et <strong>Bootstrap</strong>. Compétences basique en développement
-                        backend. Maitrise des langages <strong>PHP</strong> et
-                        <strong>MySQL</strong>. (POO, PDO)
+                        backend. Maitrise des langages <strong>PHP (POO, PDO, Thème Wordpress)</strong> et
+                        <strong>MySQL</strong>. Maitrise de l'environnement <strong>Github</strong>.
                     </p>
                 </div>
                 <div class="comp-items">
