Ajout contenu projet fcems

--- a/index.html
+++ b/index.html
@@ -199,12 +199,8 @@
             <!-- WORK PROJECT -->
             <div class="work-container">
                 <div class="work-project site-project">
-                    <div class="warning-alert">
-                        <img src="img/icon/warning.png" alt="attention">
-                        <p>Page en conception</p>
-                    </div>
                     <h4>site fc ems</h4>
-                    <a>
+                    <a href="pages/project-fcems.html">
                         <img src="source/projet-img/site/fcems.jpg" alt="football club ems">
                     </a>
                 </div>
