--- a/pages/project-fcems.html
+++ b/pages/project-fcems.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="../pages/project-healthy.html">Projet Précédent</a></li>
                 <li><a href="../index.html"><img src="../img/logo/TC.png" alt="logo_tom_charlet"></a></li>
-                <li><a href="../pages/project-target.html">Projet Suivant</a></li>
+                <li><a href="../pages/project-lepalais.html">Projet Suivant</a></li>
             </ul>
         </nav>
     </header>
@@ -36,80 +36,129 @@
 
     <main class="main-project">
 
-        <!-- RAW MAGAZINE -->
+        <!-- CONTENU -->
 
         <div id="3" class="project-container glass-sec">
             <section class="sec-content">
-
-                <h3 class="sub-title">Presentation de l'evenement fictif</h3>
-                <div class="full-video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/AMAROZgBVDs"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                <h3 class="sub-title">Maquette du site web</h3>
-                <p class="text-project">Page d'accueil :</p>
+                <h3 class="sub-title">Contribution au projet</h3>
+                <p class="text-project">
+                    Durant ce projets, mes apports furent majeurs, car j'ai entièrement réalisé la maquette du site
+                    web coté utilisateur (via FIGMA), j'ai intégré tout le site web coté utilisateur en (HTML, CSS),
+                    ainsi que quelques fonctionnalités en JavaScript et j'ai en aidé à la conception de le
+                    l'identité graphique du club.
+                </p>
+                <h3 class="sub-title">Livrables du projet</h3>
+                <p>- Cahier des charges<br>
+                    - Maquette de site Web<br>
+                    - Site Web Desktop / Mobile (HTML, CSS, JS)</br>
+                    - Pannel Administrateur (géré en PHP, MySQL)<br>
+                    - Affiches de communication<br>
+                    - Guide utilisateur (PDF)
+                </p>
+                <h3 class="sub-title">Maquette du site</h3>
                 <div class="full-img">
-                    <a href="../source/projet-desc/le palais/home.jpg" target="_blank">
-                        <img src="../source/projet-desc/le palais/home.jpg" alt="img-projet">
+                    <a href="../source/projet-desc/fc-ems/HOMEPAGE.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/HOMEPAGE.png" alt="img-projet">
                     </a>
                 </div>
-                <p class="text-project">Page évenements :</p>
                 <div class="full-img">
-                    <a href="../source/projet-desc/le palais/event.jpg" target="_blank">
-                        <img src="../source/projet-desc/le palais/event.jpg" alt="img-projet">
+                    <a href="../source/projet-desc/fc-ems/RESULTATS.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/RESULTATS.png" alt="img-projet">
                     </a>
                 </div>
-                <p class="text-project">Page évenement fictif :</p>
                 <div class="full-img">
-                    <a href="../source/projet-desc/le palais/event-foudriot.jpg" target="_blank">
-                        <img src="../source/projet-desc/le palais/event-foudriot.jpg" alt="img-projet">
+                    <a href="../source/projet-desc/fc-ems/CONVOCATIONS.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/CONVOCATIONS.png" alt="img-projet">
                     </a>
                 </div>
-                <p class="text-project">Page bâtiment :</p>
                 <div class="full-img">
-                    <a href="../source/projet-desc/le palais/batiment.jpg" target="_blank">
-                        <img src="../source/projet-desc/le palais/batiment.jpg" alt="img-projet">
+                    <a href="../source/projet-desc/fc-ems/ORGANIGRAMME.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/ORGANIGRAMME.png" alt="img-projet">
                     </a>
                 </div>
-                <p class="text-project">Page billeterie :</p>
                 <div class="full-img">
-                    <a href="../source/projet-desc/le palais/billeterie.jpg" target="_blank">
-                        <img src="../source/projet-desc/le palais/billeterie.jpg" alt="img-projet">
+                    <a href="../source/projet-desc/fc-ems/GALERIE.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/GALERIE.png" alt="img-projet">
                     </a>
                 </div>
-                <p class="text-project">Page informations :</p>
                 <div class="full-img">
-                    <a href="../source/projet-desc/le palais/info.jpg" target="_blank">
-                        <img src="../source/projet-desc/le palais/info.jpg" alt="img-projet">
+                    <a href="../source/projet-desc/fc-ems/PARTENAIRE.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/PARTENAIRE.png" alt="img-projet">
                     </a>
                 </div>
+                <h3 class="sub-title">Templates d'articles</h3>
+                <div class="full-img">
+                    <a href="../source/projet-desc/fc-ems/ARTICLE.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/ARTICLE.png" alt="img-projet">
+                    </a>
+                </div>
+                <div class="full-img">
+                    <a href="../source/projet-desc/fc-ems/ARTICLE-2.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/ARTICLE-2.png" alt="img-projet">
+                    </a>
+                </div>
+                <h3 class="sub-title">Version mobile</h3>
+                <div class="small-img">
+                    <a href="../source/projet-desc/fc-ems/PHONE-HOMEPAGE.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/PHONE-HOMEPAGE.png" alt="img-projet">
+                    </a>
+                </div>
+                <div class="small-img">
+                    <a href="../source/projet-desc/fc-ems/PHONE-HOMEPAGE-1.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/PHONE-HOMEPAGE-1.png" alt="img-projet">
+                    </a>
+                </div>
+                <h3 class="sub-title">Pannel Administrateur</h3>
+                <div class="full-img">
+                    <a href="../source/projet-desc/fc-ems/PANNEL.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/PANNEL.png" alt="img-projet">
+                    </a>
+                </div>
+                <h3 class="sub-title">Guide couleurs</h3>
+                <div class="full-img">
+                    <a href="../source/projet-desc/fc-ems/WEB PALETTE.png" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/WEB PALETTE.png" alt="img-projet">
+                    </a>
+                </div>
+                <h3 class="sub-title">Participations</h3>
+                <p>- Noah ABRAHAM : intégration Pannel Administrateur, cahier des charges<br>
+                    - Antoine CAILLOT : développement web Pannel Administrateur, maquette Pannel<br>
+                    - Tom CHARLET : maquette, intégration site web, charte graphique</br>
+                    - Sofiane CHARRADA : charte graphique, affiches événements<br>
+                    - Mathilde CHEVALIER : Photos des joueurs, fiche outil<br>
+                    - Julien CORDIER : Gestion de projet, fiche outil
+                </p>
             </section>
 
+            <!-- PRESENTATION -->
+
             <section class="sec-desc">
-                <h2 class="project-title">Le Palais</h2>
+                <h2 class="project-title">Site web FC EMS</h2>
                 <div class="project-logo">
-                    <a href="../source/projet-desc/le palais/logo.png" target="_blank">
-                        <img src="../source/projet-desc/le palais/logo.png" alt="logo-project">
+                    <a href="../source/projet-desc/fc-ems/fcems.jpg" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/fcems.jpg" alt="logo-project">
                     </a>
                 </div>
                 <div class="project-desc">
                     <p>
-                        Le Palais est un projet tutoré de fin de 1re année d'IUT MMI, pour lequel nous devions réaliser
-                        les tâches suivantes : Création d'un événement autour d'un lieu historique, création site Web,
-                        création d'un trailer vidéo visant à promouvoir l'événement couvert.
+                        Le site web du Football Club Eure Madrie Seine est un projet concret (vrai commanditaire),
+                        réalisé dans le cadre d'un projet tutoré collectif de fin d'année. Les tâches à réaliser durant
+                        ce projet était les suivantes : trouver un commanditaire ayant besoin de livrables liés à la
+                        communication digitale, établir un cahier des charges selon ses demandes, être force de
+                        proposition pour la création du site web et de la communication numérique.
+                    </p>
+                    <p>Participants au projet : Noah ABRAHAM, Antoine CAILLOT, Tom CHARLET, Sofiane CHARRADA, Mathilde
+                        CHEVALIER, Julien CORDIER
                     </p>
                 </div>
-                <a href="https://tom-charlet.github.io/le-palais/" class="project-link" target="_blank">Site Web</a>
+                <a href="https://tom-charlet.github.io/FC-EMS-STATIC/" class="project-link" target="_blank">Site Web
+                    (version statique)</a>
             </section>
-
-            <!-- RAW MAGAZINE -->
     </main>
 
     <footer>
         <div>
-            <a href="mailto:charlettom11@gmail.com">tom.charlet@univ-rouen.fr</a>
+            <a href="mailto:charlettom11@gmail.com">charlettom11@gmail.com</a>
             <p>TOM CHARLET 2022 ©</p>
             <a href="https://www.linkedin.com/in/tom-charlet-4a8515208" target="_blank"
                 rel="noopener noreferrer">LINKEDIN</a>
