Ajout contenu projet fcems 2

--- a/pages/project-fcems.html
+++ b/pages/project-fcems.html
@@ -47,8 +47,14 @@
                     ainsi que quelques fonctionnalités en JavaScript et j'ai en aidé à la conception de le
                     l'identité graphique du club.
                 </p>
+                <div class="full-img">
+                    <a href="../source/projet-desc/fc-ems/site.PNG" target="_blank">
+                        <img src="../source/projet-desc/fc-ems/site.PNG" alt="img-projet">
+                    </a>
+                </div>
                 <h3 class="sub-title">Livrables du projet</h3>
                 <p>- Cahier des charges<br>
+                    - Charte graphique<br>
                     - Maquette de site Web<br>
                     - Site Web Desktop / Mobile (HTML, CSS, JS)</br>
                     - Pannel Administrateur (géré en PHP, MySQL)<br>
