Ajout contenu projet fcems 3

--- a/pages/project-fcems.html
+++ b/pages/project-fcems.html
@@ -104,12 +104,12 @@
                     </a>
                 </div>
                 <h3 class="sub-title">Version mobile</h3>
-                <div class="small-img">
+                <div class="full-img">
                     <a href="../source/projet-desc/fc-ems/PHONE-HOMEPAGE.png" target="_blank">
                         <img src="../source/projet-desc/fc-ems/PHONE-HOMEPAGE.png" alt="img-projet">
                     </a>
                 </div>
-                <div class="small-img">
+                <div class="full-img">
                     <a href="../source/projet-desc/fc-ems/PHONE-HOMEPAGE-1.png" target="_blank">
                         <img src="../source/projet-desc/fc-ems/PHONE-HOMEPAGE-1.png" alt="img-projet">
                     </a>
@@ -148,7 +148,10 @@
                 <div class="project-desc">
                     <p>
                         Le site web du Football Club Eure Madrie Seine est un projet concret (vrai commanditaire),
-                        réalisé dans le cadre d'un projet tutoré collectif de fin d'année. Les tâches à réaliser durant
+                        réalisé dans le cadre d'un projet tutoré collectif de fin d'année.
+                    </p>
+                    <p>
+                        Les tâches à réaliser durant
                         ce projet était les suivantes : trouver un commanditaire ayant besoin de livrables liés à la
                         communication digitale, établir un cahier des charges selon ses demandes, être force de
                         proposition pour la création du site web et de la communication numérique.
