update maj correctif

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 </g>
             </g>
         </svg>
+        <h1 class="hidden">tom charlet</h1>
         <h2>Intégrateur web passionné</h2>
         <a href="#profil">
             <svg id="arrow-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68.09 57.99">
@@ -112,9 +113,9 @@
                     </svg>
                 </div>
                 <div class="pop-view">
-                    <div class="pop-view-bg">
+                    <a class="pop-view-bg" href="img/TomCharlet_CV.png" target="_blank">
                         <img src="img/TomCharlet_CV.png" alt="CV">
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -125,11 +126,12 @@
         <h3 class="main-title">Qui suis-je ?</h3>
         <section class="about-sec">
             <div class="about-me glass-sec">
-                <p class="about-text general-text">Actuellement étudiant en deuxième année à l’université de Rouen en
-                    DUT MMI (Métiers du Multimédia et de l'Internet),
-                    je suis à la recherche d'une alternance aux alentours de Rouen,
-                    afin d'intégrer une Licence Professionnelle dans le domaine du développement frontend et
-                    l'intégration web.
+                <p class="about-text general-text">
+                    Intégrateur Web / Développeur Frontend en alternance dans l'agence digitale Marque Blanche,
+                    je suis étudiant en Licence Professionnelle Métiers du Numérique (conception, rédaction et
+                    réalisation web).
+                    Passionné par le developpement web et la création numérique, j'ai le sens du détail et j'aime
+                    découvrir le monde digital par moi-même.
                 </p>
                 <div class="about-img general-text">
                     <img src="img/profil-tom.jpg" alt="photo profil tom">
@@ -148,27 +150,51 @@
             <div class="comp-container">
                 <div class="comp-items">
                     <h5>Développement Web</h5>
-                    <p class="general-text">Compétences principales en développement frontend.
-                        Maitrise des langages <strong>HTML 5</strong>, <strong>CSS 3 (flexbox, grid, SASS)</strong>,
+                    <p class="general-text">Maitrise des langages
+                        <strong>HTML</strong>,
+                        <strong>CSS</strong>,
                         <strong>JavaScript</strong>,
-                        <strong>jQuery</strong> et <strong>Bootstrap</strong>. Compétences basique en développement
-                        backend. Maitrise des langages <strong>PHP (POO, PDO, Thème Wordpress)</strong> et
-                        <strong>MySQL</strong>. Maitrise de l'environnement <strong>Github</strong>.
+                        <strong>PHP</strong>,
+                        <strong>SQL</strong> et
+                        <strong>C sharp</strong>. Maitrise des technologies
+                        <strong>React</strong>,
+                        <strong>Next.js</strong>,
+                        <strong>jQuery</strong>,
+                        <strong>SASS</strong>,
+                        <strong>Tailwind CSS</strong>,
+                        <strong>Bootstrap</strong>,
+                        <strong>Strapi</strong> et
+                        <strong>Wordpress</strong>. Maitrise de
+                        <strong>Git</strong>,
+                        <strong>Node</strong>,
+                        <strong>NPM</strong>,
+                        <strong>Filezilla</strong>,
+                        <strong>Insomnia</strong>,
+                        <strong>XAMMP</strong> et
+                        <strong>Laragon</strong>
                     </p>
                 </div>
                 <div class="comp-items">
                     <h5>Design Graphique</h5>
-                    <p class="general-text">Réalisation d'identité graphique, d'affiches et de bannières publicitaires.
-                        Maitrise des logiciels de la suite Adobe tel qu’
-                        <strong>iIllustrator</strong> ou <strong>Photoshop</strong>. Maitrise de <strong>GANT
-                            PROJECT</strong>.
+                    <p class="general-text">Réalisation d'interfaces, de maquettes fonctionnelles, d'identités
+                        graphiques, d'affiches et de bannières publicitaires.
+                        Maitrise de
+                        <strong>Figma</strong>,
+                        <strong>Adobe XD</strong>,
+                        <strong>Indesign</strong>,
+                        <strong>Photoshop</strong> et
+                        <strong>Illustrator</strong>.
                     </p>
                 </div>
                 <div class="comp-items">
                     <h5>Audiovisuel</h5>
-                    <p class="general-text">Bonne culture du monde Audiovisuel, réalisation, écriture de scénario,
-                        montage vidéo. Maitrise des logiciels
-                        Adobe <strong>Premiere Pro</strong>, <strong>After Effect</strong>. Minutie et sens du détail.
+                    <p class="general-text">Bonne culture du monde Audiovisuel. Minutie et sens du détail.
+                        Compétences principales en montage vidéo, en motion design et en réalisation.
+                        Maitrise de
+                        <strong>Premiere Pro</strong>,
+                        <strong>After Effects</strong>,
+                        <strong>DaVinci Resolve</strong>,
+                        <strong>Blender</strong>.
                     </p>
                 </div>
             </div>
