ajout projet signaletique

--- a/index.html
+++ b/index.html
@@ -231,12 +231,8 @@
                     </a>
                 </div>
                 <div class="work-project illu-project">
-                    <div class="warning-alert">
-                        <img src="img/icon/warning.png" alt="attention">
-                        <p>Page en conception</p>
-                    </div>
                     <h4>signaletique</h4>
-                    <a>
+                    <a href="pages/project-signaletique.html">
                         <img src="source/projet-img/illu/signaletique.jpg" alt="signaletique">
                     </a>
                 </div>
