--- a/index.html
+++ b/index.html
@@ -169,9 +169,11 @@
                         <strong>Node</strong>,
                         <strong>NPM</strong>,
                         <strong>Filezilla</strong>,
-                        <strong>Insomnia</strong>,
-                        <strong>XAMMP</strong> et
-                        <strong>Laragon</strong>
+                        <strong>Insomnia</strong>.
+                        Maitrise de la qualité web : <strong><a
+                                href="https://directory.opquast.com/fr/certificat/8RXID9/" target="_blank">
+                                Certification Opquast</a>
+                        </strong>
                     </p>
                 </div>
                 <div class="comp-items">
