--- a/pages/project-concept.html
+++ b/pages/project-concept.html
@@ -15,6 +15,7 @@
 <body>
 
     <!-- HEADER -->
+
     <header>
         <nav class="nav-page">
             <ul>
@@ -35,12 +36,11 @@
     <!-- MAIN -->
 
     <main class="main-project">
-
-        <!-- RAW MAGAZINE -->
-
         <div id="3" class="project-container glass-sec">
-            <section class="sec-content">
 
+            <!-- CONTENT MAIN -->
+
+            <section class="sec-content">
                 <h3 class="sub-title">Affiches</h3>
                 <div class="full-img">
                     <a href="../source/projet-desc/mask, lives better/affiche1.jpg" target="_blank">
@@ -52,7 +52,6 @@
                         <img src="../source/projet-desc/mask, lives better/affiche2.jpg" alt="img-projet">
                     </a>
                 </div>
-
                 <h3 class="sub-title">Premier essaie</h3>
                 <div class="full-img">
                     <a href="../source/projet-desc/mask, lives better/essai1.jpg" target="_blank">
@@ -65,11 +64,10 @@
                         <img src="../source/projet-desc/mask, lives better/essai2.jpg" alt="img-projet">
                     </a>
                 </div>
-
-
-                <!-- <p class="text-project"></p> -->
-
             </section>
+
+            <!-- CONTENT SIDE -->
+
             <section class="sec-desc">
                 <h2 class="project-title">Mask, lives better</h2>
                 <div class="project-logo">
@@ -86,9 +84,9 @@
                 <a href="https://drive.google.com/file/d/1JzxZYhkuEw9jWj9zE8OVorRYSPQ_svNc/view?usp=sharing"
                     class="project-link" target="_blank">En savoir plus</a>
             </section>
-
-            <!-- RAW MAGAZINE -->
     </main>
+
+    <!-- FOOTER -->
 
     <footer>
         <div>
@@ -98,7 +96,6 @@
                 rel="noopener noreferrer">LINKEDIN</a>
         </div>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../js/app.js"></script>
 </body>
