--- a/index.html
+++ b/index.html
@@ -226,18 +226,56 @@
 
             <!-- WORK PROJECT -->
             <div class="work-container">
+
+                <div class="work-project illu-project">
+                    <h4>Sublime</h4>
+                    <a href="pages/project-sublime.html">
+                        <img src="source/projet-img/illu/sublime.jpg" alt="build-it">
+                    </a>
+                </div>
+
+                <div class="work-project illu-project">
+                    <h4>Build-it</h4>
+                    <a href="pages/project-buildit.html">
+                        <img src="source/projet-img/illu/build-it.png" alt="build-it">
+                    </a>
+                </div>
+
+                <div class="work-project video-project">
+                    <h4>Générique</h4>
+                    <a href="pages/project-generique.html">
+                        <img src="source/projet-img/video/generique.png" alt="generique">
+                    </a>
+                </div>
+
+                <div class="work-project illu-project">
+                    <h4>Sensicare</h4>
+                    <a href="pages/project-sensicare.html">
+                        <img src="source/projet-img/illu/sensicare.jpg" alt="sensicare">
+                    </a>
+                </div>
+
+                <div class="work-project site-project">
+                    <h4>Memory</h4>
+                    <a href="pages/project-memory.html">
+                        <img src="source/projet-img/site/memory.jpg" alt="memory game">
+                    </a>
+                </div>
+
                 <div class="work-project site-project">
                     <h4>site fc ems</h4>
                     <a href="pages/project-fcems.html">
                         <img src="source/projet-img/site/fcems.jpg" alt="football club ems">
                     </a>
                 </div>
+
                 <div class="work-project illu-project">
                     <h4>signaletique</h4>
                     <a href="pages/project-signaletique.html">
                         <img src="source/projet-img/illu/signaletique.jpg" alt="signaletique">
                     </a>
                 </div>
+
                 <div class="work-project video-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
@@ -248,18 +286,21 @@
                         <img src="source/projet-img/video/motion.PNG" alt="motion design">
                     </a>
                 </div>
+
                 <div class="work-project illu-project">
                     <h4>raw magazine</h4>
                     <a href="pages/project-raw.html">
                         <img src="source/projet-img/illu/raw-magazine.jpg" alt="raw magazine">
                     </a>
                 </div>
+
                 <div class="work-project illu-project">
                     <h4>mask, lives better</h4>
                     <a href="pages/project-mask.html">
                         <img src="source/projet-img/illu/mask, lives better.jpg" alt="mask, lives better">
                     </a>
                 </div>
+
                 <div class="work-project illu-project">
                     <div class="warning-alert">
                         <img src="img/icon/warning.png" alt="attention">
@@ -270,50 +311,35 @@
                         <img src="source/projet-img/illu/concept-art.jpg" alt="concept">
                     </a>
                 </div>
+
                 <div class="work-project site-project">
                     <h4>t-arget</h4>
                     <a href="pages/project-target.html">
                         <img src="source/projet-img/site/t-arget.jpg" alt="t-arget">
                     </a>
                 </div>
+
                 <div class="work-project video-project">
                     <h4>Portrait Mesrine</h4>
                     <a href="pages/project-mesrine.html">
                         <img src="source/projet-img/video/portrait-mesrine.jpg" alt="portrait mesrine">
                     </a>
                 </div>
+
                 <div class="work-project site-project">
                     <h4>le palais</h4>
                     <a href="pages/project-lepalais.html">
                         <img src="source/projet-img/site/le-palais.jpg" alt="le palais">
                     </a>
                 </div>
+
                 <div class="work-project video-project">
                     <h4>disarmed</h4>
                     <a href="pages/project-disarmed.html">
                         <img src="source/projet-img/video/disarmed.jpg" alt="disarmed">
                     </a>
                 </div>
-                <div class="work-project illu-project">
-                    <div class="warning-alert">
-                        <img src="img/icon/warning.png" alt="attention">
-                        <p>Page en conception</p>
-                    </div>
-                    <h4>environnement</h4>
-                    <a>
-                        <img src="source/projet-img/illu/environnement.jpg" alt="environnement">
-                    </a>
-                </div>
-                <div class="work-project video-project">
-                    <div class="warning-alert">
-                        <img src="img/icon/warning.png" alt="attention">
-                        <p>Page en conception</p>
-                    </div>
-                    <h4>cone jumper</h4>
-                    <a>
-                        <img src="source/projet-img/video/cone-jumper.jpg" alt="Interview cone jumper">
-                    </a>
-                </div>
+
                 <div class="work-project illu-project">
                     <h4>Healthy +</h4>
                     <a href="pages/project-healthy.html">
