--- a/pages/project-healthy.html
+++ b/pages/project-healthy.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="../pages/project-disarmed.html">Projet Précédent</a></li>
                 <li><a href="../index.html"><img src="../img/logo/TC.png" alt="logo_tom_charlet"></a></li>
-                <li><a href="../pages/project-fcems.html">Projet Suivant</a></li>
+                <li><a href="../pages/project-sublime.html">Projet Suivant</a></li>
             </ul>
         </nav>
     </header>
