--- a/pages/project-raw.html
+++ b/pages/project-raw.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="nav-page">
             <ul>
-                <li><a href="../pages/project-target.html">Projet Précédent</a></li>
+                <li><a href="../pages/project-signaletique.html">Projet Précédent</a></li>
                 <li><a href="../index.html"><img src="../img/logo/TC.png" alt="logo_tom_charlet"></a></li>
                 <li><a href="../pages/project-mask.html">Projet Suivant</a></li>
             </ul>
